Get the source code to build with Java 11 (see issue #249) by replacing references to the java.xml.bind module with the libraries and upgrading some reporting plugins.