@@ -203,7 +203,6 @@
         <configuration>
           <!-- Let reflection code run in Java 10 -->
           <argLine>
-            --add-modules java.xml.bind
             --add-opens java.base/java.lang=ALL-UNNAMED
             --add-opens java.base/java.util=ALL-UNNAMED
             --illegal-access=deny
@@ -252,7 +251,6 @@
           <target>${maven.compiler.target}</target>
           <fork>true</fork>
           <compilerArgs>
-            <arg>--add-modules=java.xml.bind</arg>
             <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
             <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
           </compilerArgs>
@@ -307,7 +305,7 @@
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.1</version>
+          <version>0.8.4</version>
           <executions>
             <execution>
               <id>default-prepare-agent</id>
@@ -405,22 +403,7 @@
         <plugin>
           <groupId>com.github.spotbugs</groupId>
           <artifactId>spotbugs-maven-plugin</artifactId>
-          <version>3.1.3</version>
-          <dependencies>
-            <dependency>
-              <groupId>com.github.spotbugs</groupId>
-              <artifactId>spotbugs</artifactId>
-              <!-- Explicitly use version 3.1.3 of spotbugs because the 3.1.3 plugin uses spotbugs 3.1.2 which doesn't
-                   support Java 10 (https://github.com/spotbugs/spotbugs/issues/593) -->
-              <version>3.1.3</version>
-              <exclusions>
-                <exclusion>
-                  <groupId>xml-apis</groupId>
-                  <artifactId>xml-apis</artifactId>
-                </exclusion>
-              </exclusions>
-            </dependency>
-          </dependencies>
+          <version>3.1.11</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -431,14 +414,14 @@
             <linksource>true</linksource>
             <overview>overview.html</overview>
             <links>
-              <link>http://download.oracle.com/javase/10/docs/api</link>
-              <link>http://download.oracle.com/javaee/7/api</link>
+              <link>https://docs.oracle.com/en/java/javase/11/docs/api</link>
+              <link>https://docs.oracle.com/javaee/7/api/</link>
               <link>http://junit.org/junit4/javadoc/latest</link>
               <link>http://davidwhitlock.github.io/PortlandStateJava/apidocs</link>
             </links>
             <detectJavaApiLink/>
             <detectLinks/>
-            <additionalOptions>-html5 --add-modules java.xml.bind</additionalOptions>
+            <additionalOptions>-html5</additionalOptions>
           </configuration>
         </plugin>
         <plugin>
